// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AugmentIcon > renders gold augment with gold border color 1`] = `
<div>
  <div
    style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
    title="Gold Rush"
  >
    <img
      alt="Gold Rush"
      src="mayhem-asset://augment-icons/2.png"
      style="width: 100%; height: 100%; object-fit: cover;"
    />
  </div>
</div>
`;

exports[`AugmentIcon > renders prismatic augment with prismatic border color 1`] = `
<div>
  <div
    style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
    title="Prismatic Eye"
  >
    <img
      alt="Prismatic Eye"
      src="mayhem-asset://augment-icons/3.png"
      style="width: 100%; height: 100%; object-fit: cover;"
    />
  </div>
</div>
`;

exports[`AugmentIcon > renders silver augment with correct name and icon 1`] = `
<div>
  <div
    style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
    title="Iron Will"
  >
    <img
      alt="Iron Will"
      src="mayhem-asset://augment-icons/1.png"
      style="width: 100%; height: 100%; object-fit: cover;"
    />
  </div>
</div>
`;
